# joke-proxy

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  kind-config.yaml  mongo-init.js  pyproject.toml
app/: api.py  config.py  database.py  logging.py  main.py
k8s/app/base/: configmap.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  mongo-user-creation-job.yaml  secret.yaml  service.yaml
k8s/app/overlays/dev/: kustomization.yaml
k8s/app/overlays/prod/: kustomization.yaml
k8s/app/overlays/staging/: kustomization.yaml
k8s/cluster-setup/: ingress-nginx-for-kind.yaml  mongo.yaml  namespaces.yaml
